fix: 100% height problem on mobile device

--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 
 #app {
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
